# pythonal

./: .gitignore  README.md  pyproject.toml  setup.cfg
pythonal/: __init__.py
