[metadata]
name = pythonal
version = 0.0.1
author = James Calo
author_email = jamesafcalo@gmail.com
description = Functional Python Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SagaraBattousai/pythonal.git
classifiers = 
  Programming Language :: Python :: 3.9
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent

[options]
# package_dir =
#   = src
packages = find:
python_requires = >=3.9
# install_requires =
#   matplotlib
# include_package_data = True

[options.packages.find]
# where = 
